# live-outline

./: .gitignore  CLAUDE.md  Dockerfile  README.md  compose.yaml  convert-icons.sh  eslint.config.js  gemini-tts.ts  index.html  nlp.test.ts  nlp.ts  nlp_gemini_2.ts  package-lock.json  package.json  plan.txt  pyproject.toml  server.js  server.ts  spec.md  state.js  state.test.js  template-.env  todo.md  vite.config.ts
backend/: server.py
examples/: example1.md
frontend/: audio-worklet.js  client.js  index.html
public/: index.js  manifest.json  sw.js
scripts/: run-e2e-tests.js
src/: App.css  App.test.jsx  App.tsx  CheckboxForAtom.tsx  ConfigContext.tsx  ConfigPanel.tsx  LayoutDiagram.tsx  ProseMirrorEditor.tsx  SlidesPlayer.tsx  SourceTextTranslationManager.tsx  SpeechTranscriber.tsx  TranslatedTextViewer.tsx  TranslationControls.tsx  configAtoms.ts  main.tsx  reactUtils.tsx  rehypeAddClickableBlocks.tsx  remarkEmphasizeNewNodes.ts  translationUtils.ts  useTranslationManager.ts  yjsUtils.ts
tests/: e2e-test.ts
