[project]
name = "live-outline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "assemblyai[extras]>=0.37.0",
    "fastapi>=0.115.8",
    "librosa>=0.10.2.post1",
    "mlx-whisper>=0.4.2",
    "openai>=1.63.0",
    "pydub>=0.25.1",
    "uvicorn[standard]>=0.34.0",
]
